# libSDL2pp

./: CMakeLists.txt
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
examples/: CMakeLists.txt
