ADD_COMPILE_DEFINITIONS(TESTDATA_DIR="${PROJECT_SOURCE_DIR}/testdata")

SET(EXAMPLES
	audio_sine
	audio_wav
	lines
	rendertarget
	sprites
)

IF(SDL2PP_WITH_IMAGE)
	LIST(APPEND EXAMPLES
		image
		fill
	)
ENDIF(SDL2PP_WITH_IMAGE)

IF(SDL2PP_WITH_MIXER)
	LIST(APPEND EXAMPLES
		mixer
		mixer_music
		mixer_music_sine
		mixer_effects
	)
ENDIF(SDL2PP_WITH_MIXER)

IF(SDL2PP_WITH_TTF)
	LIST(APPEND EXAMPLES
		ttf
	)
ENDIF(SDL2PP_WITH_TTF)

FOREACH(EXAMPLE ${EXAMPLES})
	ADD_EXECUTABLE(${EXAMPLE})
	TARGET_SOURCES(${EXAMPLE} PRIVATE ${EXAMPLE}.cc)
	TARGET_LINK_LIBRARIES(${EXAMPLE} PRIVATE SDL2pp)
ENDFOREACH(EXAMPLE)
